# battle_tok

./: .gitignore  BENI.HTML  CLAUDE.md  Cargo.toml  battle_arena.rs  lava_water_3d.html  progress.md  progress_battle_tok.txt  progress_battle_tök.txt  summary.md  test.html  visualupgrade.md  visualupgrade_todo.md
.claude/skills/add-phase/: SKILL.md
.claude/skills/decompose/: SKILL.md
.claude/skills/game-ui-design/: SKILL.md
.claude/skills/nextjs-validator/: SKILL.md
.claude/skills/phase-worker/: SKILL.md
.claude/skills/prd/: SKILL.md
.claude/skills/project-idea/: SKILL.md
.claude/skills/worker/: SKILL.md
assets/world/: library.json
constraints/: technical.md
context/: README.md
docs/: architecture.md  asset_editor_prd.md  browser_build.md  voxel_sdf_bake.md
engine/shaders/: sdf_human.wgsl  sdf_primitives.wgsl  sky_bake.wgsl  sky_gradient.wgsl
engine/src/: lib.rs
engine/src/camera/: controller.rs  fps_controller.rs  mod.rs  raycast.rs
engine/src/input/: bindings.rs  cursor_manager.rs  handler.rs  keyboard.rs  mod.rs  mouse.rs  mouse_state.rs
engine/tests/: camera_tests.rs  entity_tests.rs  render_tests.rs
exclusions/: dont_want.md  out_of_scope.md
game/battle_sphere/: summary.md
ideas/: features.md  original_prompt.md  refined_idea.md
output/web-game/: errors-0.json
output/web-game-http/: state-0.json  state-1.json
phases/phase_2/: phase_config.json  phase_spec.md
phases/phase_3/: phase_config.json  phase_spec.md
phases/phase_4/: phase_config.json  phase_spec.md
rules/: GLOBAL_RULES.md
scripts/: run_web_game_skill_test.js
shaders/: apocalyptic_sky.wgsl  bloom_blur.wgsl  bloom_extract.wgsl  canvas_2d.wgsl  castle_stone.wgsl  chain_metal.wgsl  culling.wgsl  editor_3d.wgsl  editor_overlay.wgsl  ember_particle.wgsl  flag.wgsl  fog_post.wgsl  froxel_assign.wgsl  froxel_clear.wgsl  froxel_lookup.wgsl  handle_overlay.wgsl  hex_prism.wgsl  hex_terrain.wgsl  instancing.wgsl  lava.wgsl  lighting.wgsl  mesh.wgsl  noise.wgsl  player_sdf.wgsl  raymarcher.wgsl  raymarcher.wgsl.bak  sdf_bake.wgsl  sdf_cannon.wgsl  sdf_primitives.wgsl  sky_storm_procedural.wgsl  skybox.wgsl  stormy_sky.wgsl  taa.wgsl  terrain_enhanced.wgsl  tile_culling.wgsl  tonemap_aces.wgsl  tonemap_composite.wgsl  ui.wgsl  voxel_shell.wgsl  wood_plank.wgsl
src/: terrain_mesh.rs
src/game/: arena_cannon.rs  arena_player.rs  destruction.rs  mod.rs  state.rs  trees.rs  types.rs
src/rendering/: hex_prism.rs  mod.rs  sdf_objects.rs
src/shaders/: block_faces.wgsl  sdf_core_test.wgsl  sdf_demo.wgsl  terrain_mesh.wgsl
www/: index.html
(+236 files in other folders)
