[package]
name = "battle_tok"
version = "0.1.0"
edition = "2024"
description = "Hexagon-based strategy game - reunite the world after collapse"

[lib]
name = "battle_tok_engine"
path = "engine/src/lib.rs"

[[bin]]
name = "hex-planet"
path = "src/bin/hex_planet.rs"

[[bin]]
name = "battle_arena"
path = "src/bin/battle_arena.rs"

[[bin]]
name = "battle_editor"
path = "src/bin/battle_editor.rs"

[dependencies]
# Graphics
wgpu = "27"
glam = { version = "0.31", features = ["serde"] }
bytemuck = { version = "1.14", features = ["derive"] }
winit = "0.30"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image loading (PNG skybox cubemaps)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Async runtime (for wgpu)
pollster = "0.4"

# Compile-time assertions
static_assertions = "1.1"
core_affinity = "0.8"

# Browser (wasm) support — for agent testing and automated browser tests
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
naga = { version = "27", features = ["wgsl-in"] }

[profile.dev]
opt-level = 1 # Enable some optimization in dev for shader compilation speed

[profile.release]
opt-level = 3
lto = true
